--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,6 +5,35 @@
   max-width: unset !important
 }
 
+.swiper-pagination-fraction,
+.swiper-pagination-custom,
+.swiper-container-horizontal > .swiper-pagination-bullets {
+  left: 0;
+  bottom: 30rem;
+  width: 100%;
+}
+
+.toolbar-background-md {
+  border-color: #4889F6;
+  background: #4889F6;
+  color:white;
+}
+
+.toolbar-title-md
+{
+  color:white !important;
+  font-size: 3rem;
+  margin:2rem auto;
+}
+
+.bar-button-default-md,
+.bar-button-clear-md-default,
+.bar-button-md-default {
+  color:white;
+  font-size: 3rem !important;
+  margin:2rem auto;
+}
+
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
