--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,87 @@
-page-home {
+.container-home
+{
+  position: relative;
+  padding: 0 25%;
+  min-height: 100vh;
+  color: #52628C;
+  background-color: white;
+  text-align:center;
+  font-weight: bolder;
+}
 
+.div-text-home
+{
+  margin:5rem auto;
+  font-size:5rem;
+  font-weight: bolder;
+}
+
+.div-btn-home
+{
+  position: relative;
+  margin: 3rem auto;
+  text-align: left;
+  padding: 2rem;
+  width: 70rem;
+  border-radius: 10px;
+}
+
+.div-btn-paseo
+{
+  background-color:#89D1F9;
+  color:#4C88BA;
+}
+
+.div-btn-planes
+{
+  background-color:#FBE4A7;
+}
+
+.div-img-btn
+{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40%;
+}
+
+.title-btn
+{
+  font-size:4rem;
+  margin:2rem;
+  color:#5B7C9D;
+}
+
+.text-btn
+{
+  margin:2rem;
+  font-size:2.5rem;
+  color:#4C88BA;
+}
+
+.div-img-btn
+{
+  position:absolute;
+  text-align: right;
+}
+
+.img-btn-paseo
+{
+  width: 47%;
+  margin-right: 24%;
+  margin-bottom: -1%;
+}
+
+.title-btn-opc
+{
+  margin:2rem 0;
+  font-size:2.5rem;
+  color:#475A7F
+}
+
+.text-btn-opc
+{
+  color:#D8D8D8;
+  margin:2rem 0;
+  font-size:2.5rem;
 }
