--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,7 +2,8 @@
 
 .item-input ion-label
 {
-  max-width: unset !important
+  max-width: unset !important;
+  color: black;
 }
 
 .swiper-pagination-fraction,
