--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -6,9 +6,10 @@
 .btn-saltar
 {
   position:absolute;
-  top:40px;
-  right:60px;
-  font-size:3rem;
+  top:30px;
+  right:40px;
+  font-size:2rem;
+  background-color: transparent;
 }
 
 .div-slide
@@ -19,15 +20,22 @@
 .title-slide
 {
   color: #3C92D9;
-  font-size: 4rem;
-  margin: 8rem auto 3rem auto;
+  font-size: 3rem;
+  margin: 4rem auto 3rem auto;
 }
 
 .text-slide
 {
-  font-size: 3rem;
+  font-size: 2rem;
   color: grey;
-  margin-bottom:20rem;
+  width: 80%;
+  margin: auto;
+  margin-bottom:5rem;
+}
+
+.img-slide
+{
+  height: 400px !important;
 }
 
 .bold
@@ -37,8 +45,8 @@
 
 .btn-start
 {
-  width: 40%;
-  margin: 5rem auto 15rem auto;
+  width: 80%;
+  margin: 7rem auto 5rem auto;
   font-size: 2rem;
   border-radius: 10px;
   height: 60px;
