--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -29,7 +29,7 @@
 
 .div-form-login
 {
-  // width: 40%;
+  max-width: 730px;
   margin:-3rem auto 1rem auto !important;
   text-align: left;
   border: solid 2px lightgrey;
