--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,7 +1,14 @@
-// .title-register
-// {
-//   margin-left:2rem;
-// }
+.title-register
+{
+  margin:auto 0;
+  width:80%;
+}
+
+.content-register
+{
+  max-width: 730px;
+  margin: auto;
+}
 
 .btn-back-register
 {
