--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,8 +15,8 @@
 }
 
 .toolbar-background-md {
-  border-color: #4889F6;
-  background: #4889F6;
+  border-color: #4889F6 !important;
+  background: #4889F6 !important;
   color:white;
 }
 
