--- a/src/pages/add-form/add-form.scss
+++ b/src/pages/add-form/add-form.scss
@@ -5,7 +5,7 @@ page-add-form
 
 .container-add
 {
-  // width:50%;
+  max-width:730px;
   margin:auto;
   font-size:1rem;
 }
@@ -14,7 +14,7 @@ page-add-form
 {
   text-align: left;
   font-size: 2rem;
-  margin: 4rem auto 2rem auto;
+  margin: 4rem 0 2rem 22px;
   width: 90%;
 }
 
@@ -24,7 +24,7 @@ page-add-form
   color: white;
   font-size: 2rem;
   box-shadow: none;
-  width: 20%;
+  // width: 20%;
   float: right;
   margin: auto;
 }
