lato font family

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,11 @@
 // http://ionicframework.com/docs/theming/
 
+*
+{
+  font-family: 'Lato', sans-serif;
+}
+
+
 .item-input ion-label
 {
   max-width: unset !important;
