--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -41,45 +41,53 @@
 
 .div-btns-login
 {
-  width: fit-content;
+
   margin: 6rem auto 1rem auto;
+  width:fit-content;
 }
 
 .btn-login
 {
-  width: 100%;
-  font-size: 2rem;
+  font-size: 18px;
+  font-weight: bold;
+  width: 275px;
+  height: 56px;
   margin: 1rem 0;
-  padding: 2rem 5rem;
-  border-radius: 20px;
+  // padding: 2rem 5rem;
+  border-radius: 8px;
 }
 
 .btn-login-fb
 {
-  background-color:#3A5A97;
+  background-color:#395A97;
   color:white;
 }
 
 .btn-login-ss
 {
-  background-color:#B496FA;
+  background-color:#B495FA;
   color:white;
 }
 
 .btn-register
 {
-  background-color: #FFC14D;
+  background-color: #FFC24D;
   color:white;
 }
 
 .div-img-home
 {
-  width:fit-content;
-  margin:auto;
+  margin: auto;
+  width: 246px;
+  height: 196px;
+  position:relative;
+  background-image: url('../../assets/imgs/perro_entero.png');
 }
 
-.img-perrito
-{
-  width:20rem;
-}
+// .img-perrito
+// {
+//   position: absolute;
+//   bottom: -68px;
+//   left: 0;
+// }
 
