--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -15,13 +15,13 @@
 {
   position:absolute;
   top:20px;
-  right:40px;
-  font-size:2rem;
+  right:19px;
+  font-size:18px;
 }
 
 .div-logo-waky
 {
-  padding-top: 80px;
+  padding-top: 71.8px;
   width: fit-content;
   margin: auto;
   text-align: center;
@@ -41,8 +41,7 @@
 
 .div-btns-login
 {
-
-  margin: 6rem auto 1rem auto;
+  margin: 60.48px auto 14px auto;
   width:fit-content;
 }
 
