--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,6 +1,3 @@
-
-
-
 .div-img-login
 {
   width: fit-content;
@@ -41,22 +38,28 @@
 .form-login
 {
   padding-top:5px;
-  padding-left:15px;
+  padding-left:22px;
 }
+
+.form-login-pass .item-inner
+{
+  padding-top:0 !important;
+}
+
 
 .div-text-form-login
 {
   width:80% !important;
   font-size:22px;
   color:#01002F;
-  padding:31px 0 0 32px;
+  padding:31px 0 0 43px;
   margin-bottom:10px;
   font-family: LatoBold;
 }
 
 .label
 {
-  font-size:1.5rem !important;
+  font-size:16px !important;
 }
 
 .item-inner
@@ -78,8 +81,8 @@ a
 
 .btn-send-form-login
 {
-  width: calc(100% - 61px);
-  margin: 22px 46px 22px 15px;
+  width: calc(100% - 68px);
+  margin: 22px 46px 22px 22px;
   font-size: 1.7rem;
   border-radius: 10px;
   height: 50px;
