--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -29,10 +29,10 @@
   margin: 0rem 1rem 0 1rem !important;
 }
 
-.form-login .item-inner .input-wrapper
-{
-  padding-top:30px;
-}
+// .form-login .item-inner .input-wrapper
+// {
+//   padding-top:30px;
+// }
 
 .form-login-pass .item-inner .input-wrapper
 {
