--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -83,7 +83,7 @@ a
 {
   width: calc(100% - 68px);
   margin: 22px 46px 22px 22px;
-  font-size: 1.7rem;
+  font-size: 22px;
   border-radius: 10px;
   height: 50px;
 }
