--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,7 +1,8 @@
 .title-register
 {
-  margin:auto 0;
-  width:80%;
+  margin:auto 26px auto 0;
+  font-size:22px;
+  color:#01002F;
 }
 
 .content-register
@@ -21,32 +22,45 @@
 
 .div-form-register
 {
-  // width: 40%;
-  margin:1rem auto;
+  margin:0 auto;
   text-align: left;
-  // border: solid 2px lightgrey;
-  padding: 2rem 2rem;
+  padding: 15px 20px;
   border-radius: 40px;
   position: relative;
 }
 
 .div-text-form-register
 {
-  // width: 40%;
-  margin: 4rem auto 3rem auto;
+  margin: 22px auto 0rem auto;
   display: flex;
-  font-size:2rem;
+  font-size:22px;
+  font-family: 'LatoBold';
 }
-
 
 .label
 {
-  font-size:1.5rem !important;
+  font-size:16px !important;
+}
+
+.checkbox .checkbox-ios
+{
+  position:relative;
+}
+
+.item-checkbox-button .item-inner
+{
+  padding-top: 0 !important;
+}
+
+.item-checkbox-button .item-inner a
+{
+  color:#575C71;
 }
 
 .item-inner
 {
-  margin:1rem !important;
+  padding-top:26.5px;
+  margin:0 !important;
 }
 
 .item.item-md .checkbox-md
@@ -54,22 +68,32 @@
   margin: 9px 0px 9px 4px;
 }
 
+.form-login .item-ios
+{
+  padding-left:0 !important;
+}
+
+.form-login .item .item-inner
+{
+  padding-top:32px;
+}
+
 .btn-recover-pass a
 {
-  color:#9B9B9B !important;
+  color:#575C71 !important;
   font-size:2rem !important;
 }
 
 a
 {
-  color:#9B9B9B !important;
+  color:#575C71 !important;
 }
 
 .btn-send-form-register
 {
-  width: 90%;
-  margin: 5rem auto;
-  font-size: 1.8rem;
-  border-radius: 10px;
-  height: 50px;
+  width: calc(100% - 44px);
+  margin: 122px 44px 31px 0px;
+  font-size: 18px;
+  border-radius: 8px;
+  height: 45px;
 }
