--- a/src/pages/wakypet-logo/wakypet-logo.scss
+++ b/src/pages/wakypet-logo/wakypet-logo.scss
@@ -1,6 +1,6 @@
-.div-loading-img
+.div-wakypet-img
 {
-  width: 122px;
-  height: 122px;
-  margin: 132px auto;
+  width: 187px;
+  height: 174px;
+  margin: 175px auto;
 }
