--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -64,7 +64,8 @@
 .swiper-pagination-custom,
 .swiper-container-horizontal > .swiper-pagination-bullets {
   left: 0;
-  bottom: 17rem;
+  // bottom: 17rem;
+  bottom:170px;
   width: 100%;
 }
 
