--- a/src/pages/add-form/add-form.scss
+++ b/src/pages/add-form/add-form.scss
@@ -1,6 +1,21 @@
-page-add-form
+.item-add-pet-input .input-wrapper .item-input ion-input .item-input ion-textarea
 {
-  position: relative;
+  padding-left:15px !important;
+}
+
+.item-add-pet .input-wrapper
+{
+  border: solid 1px grey;
+  border-radius: 6px;
+}
+
+::ng-deep .placeholder-black
+{
+  color:red !important;
+}
+
+::ng-deep ion-select {
+  color: #f00 !important; //placeholder color
 }
 
 .container-add
@@ -10,12 +25,16 @@ page-add-form
   font-size:1rem;
 }
 
+.form-add-pet
+{
+  margin: auto 15px auto 0px;
+}
+
 .title-add
 {
   text-align: left;
-  font-size: 2rem;
-  margin: 4rem 0 2rem 22px;
-  width: 90%;
+  font-size: 18px;
+  margin: 25px auto 0px 14px;
 }
 
 .btn-back-close
@@ -29,10 +48,17 @@ page-add-form
   margin: auto;
 }
 
+.btn-back-close ion-icon
+{
+  font-size:30px;
+  font-weight: bolder;
+}
+
 .div-btns-foto
 {
-  margin-top:2rem;
-  color:#999999;
+  font-size:18px;
+  // margin-top:10px;
+  color:black;
 }
 
 .btn-galeria
@@ -41,7 +67,7 @@ page-add-form
   border: solid #999999 2px;
   padding: 2rem;
   border-radius: 10px;
-  margin: 4rem 0;
+  margin: 12px 0;
   color:#999999;
   width:48%;
 }
@@ -54,10 +80,11 @@ page-add-form
 
 .btn-send-form
 {
-  margin: 5rem auto !important;
+  margin: 150px auto 34px auto !important;
   height: 50px !important;
   font-size: 2rem !important;
-  width: 80%;
+  // width: 80%;
+  width:275px;
   border-radius: 10px;
 
 }
