--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,6 +13,12 @@
 
 @font-face
 {
+  font-family: 'LatoSemiBold';
+  src: url('../assets/fonts/Lato/Lato-Black.ttf')
+}
+
+@font-face
+{
   font-family: 'LatoReg';
   src: url('../assets/fonts/Lato/Lato-Regular.ttf');
 }
