--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -45,6 +45,12 @@
   width:calc(100% - 100px);
 }
 
+.div-btn-login
+{
+  max-width:275px;
+  margin:auto;
+}
+
 .btn-login
 {
   font-size: 18px;
@@ -98,7 +104,7 @@
 {
   margin: auto;
   width: 246px;
-  height: 196px;
+  height: 240px;
   position:relative;
   background-image: url('../../assets/imgs/perro_entero.png');
 }
