--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,7 @@
 .container-home
 {
   position: relative;
-  max-width: 730px;
+  max-width: fit-content;
   margin:20px auto auto auto;
   min-height: 100vh;
   color: #395A97;
