--- a/src/pages/add-paseo/add-paseo.scss
+++ b/src/pages/add-paseo/add-paseo.scss
@@ -77,6 +77,7 @@
 {
   width:fit-content;
   margin:auto;
+  max-width:calc(100vw - 29px);
 }
 
 .div-grid-img-pets
@@ -133,13 +134,21 @@
 .item-add-pet .item .item-block .item-ios .item-select
 {
   padding-left:0 !important;
-  width:345px;
+  // width:345px;
+  width:100%;
 }
+
+.item-add-pet .item-inner
+{
+  padding-right:0 !important;
+}
+
 
 .div-btn-days
 {
-  margin-top:14px;
+  margin:14px 15px 0 0;
   display:grid;
+  width:100%;
   grid-template-columns: 1fr 1fr;
   grid-column-gap: 13px;
 }
@@ -216,12 +225,13 @@
 
 .div-text-repeat-week
 {
-  margin: auto 5px auto 8px;
+  margin: auto 5px auto 0px;
 }
 
 .text-repeat-week
 {
-  margin-right:4px;
+  margin: auto 4px auto 0;
+  font-size:12px;
 }
 
 .btn-repeat-week
@@ -231,17 +241,18 @@
 
 .img-quest-repeat-week
 {
-  margin-top:1px;
+  margin-top:3px;
 }
 
 .div-prices-day
 {
-
   background-color: #FFF7E6;
   color:#E3A329;
   font-size:12px;
   font-family:LatoReg;
   padding:7px 15px 9px 11px;
+  margin:8px 0 0 0;
+  border-radius: 6px;
 }
 
 .div-price-day
@@ -252,7 +263,7 @@
 
 .btns-inicio-paseo
 {
-  margin:28px 15px 0 0px;
+  margin:28px 0 0 0px;
 }
 
 .btn-inicio-paseo
@@ -284,12 +295,13 @@
 
 .text-area-comentario
 {
-  margin:10px 15px 0 0px;
+  margin:10px 0 0 0px;
   width:100%;
   height: 76px;
   border:solid 1px #D9E8ED;
   border-radius: 6px;
   padding:11px;
+  resize: none;
 }
 
 .div-text-type-pay
