--- a/src/pages/add-paseo/add-paseo.scss
+++ b/src/pages/add-paseo/add-paseo.scss
@@ -173,7 +173,7 @@
   font-family: LatoBold;
   border-radius: 6px;
   white-space: nowrap;
-  margin-bottom:7px;
+  // margin-bottom:7px;
   padding-bottom:9px;
 }
 
@@ -232,6 +232,11 @@
 {
   margin: auto 4px auto 0;
   font-size:12px;
+}
+
+.div-repeat-week
+{
+  margin-top:7px;
 }
 
 .btn-repeat-week
