--- a/src/pages/hello-ionic/hello-ionic.scss
+++ b/src/pages/hello-ionic/hello-ionic.scss
@@ -9,6 +9,8 @@
   width: 100%;
   min-height: 100vh;
   color:white;
+  display: flex;
+  flex-flow: column;
 }
 
 .btn-help-home
@@ -41,7 +43,7 @@
 
 .div-btns-login
 {
-  margin: 50px 44px 14px 56px;
+  margin: 40px 44px 14px 56px;
   width:calc(100% - 100px);
 }
 
@@ -57,7 +59,7 @@
   font-weight: bold;
   width: 100%;
   height: 45px;
-  margin: 1rem 0;
+  margin: 20px 0 0 0;
   // padding: 2rem 5rem;
   border-radius: 8px;
   font-family: LatoBold;
@@ -104,10 +106,22 @@
 {
   margin: auto;
   width: 246px;
-  height: 240px;
+  min-height: 200px;
   position:relative;
-  background-image: url('../../assets/imgs/perro_entero.png');
+  flex:1 1 auto;
+  // background-image: url('../../assets/imgs/perro_entero.png');
 }
+
+.img-home
+{
+  background-image: url('../../assets/imgs/perro_entero.png');
+  width:100%;
+  height: 200px;
+  position: absolute;
+  bottom: 0;
+  max-height: 100%;
+}
+
 
 // .img-perrito
 // {
